# bitbi

./: .gitignore  CONTRIBUTING.md  COPYING  LICENSE  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libbitbiconsensus.pc.in
.github/workflows/: android.yml  ci.yml  linux.yml  macos.yml  main.yml  windows.yml
build-aux/m4/: bitbi_find_bdb48.m4  bitbi_qt.m4  bitbi_subdir_to_include.m4
build_msvc/: README.md  bitbi.sln  bitbi_config.h.in  msvc-autogen.py  vcpkg.json
build_msvc/bench_bitcoin/: bench_bitbi.vcxproj.in
build_msvc/bitcoin-cli/: bitbi-cli.vcxproj
build_msvc/bitcoin-qt/: bitbi-qt.vcxproj
build_msvc/bitcoin-tx/: bitbi-tx.vcxproj
build_msvc/bitcoin-util/: bitbi-util.vcxproj
ci/: build-in-docker.sh  build-on-macos.sh  lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
ci/lint/: 06_script.sh  (+2 more)
contrib/: README.md  filter-lcov.py  valgrind.supp
contrib/devtools/bitcoin-tidy/: CMakeLists.txt  README  bitbi-tidy.cpp  example_logprintf.cpp  logprintf.cpp  logprintf.h
desc/: dev_desc.json  dev_new_desc.json  fund_desc.json  fund_new_desc.json  miner_new_desc.json
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitbi-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  tracing.md  (+3 more)
doc/man/: Makefile.am  bitbi-cli.1  bitbi-qt.1  bitbi-tx.1  bitbi-util.1  bitbi-wallet.1  bitbid.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitbi-chainstate.cpp  bitbi-cli-res.rc  bitbi-cli.cpp  bitbi-tx-res.rc  bitbi-tx.cpp  bitbi-util-res.rc  bitbi-util.cpp  bitbi-wallet-res.rc  bitbi-wallet.cpp  bitbid-res.rc  bitbid.cpp  blockencodings.cpp  (+129 more)
test/: README.md  config.ini.in  get_previous_releases.py
(+1535 files in other folders)
